# app-poll-lib

include/app_poll_lib/: app_poll_lib.h
samples/app_poll_lib/: CMakeLists.txt  prj.conf
samples/app_poll_lib/src/: main.c
src/: app_poll_lib.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
